uploading latest dot files -- vundle for vim, p10k etc.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,10 @@ set -sg escape-time 1
 # using Tmux
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -117,7 +121,7 @@ setw -g window-status-current-bg colour239
 setw -g window-status-current-attr bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour170]#F '
 
-set-option -g set-titles-string 'do epic shit. | #S | / #W'
+set-option -g set-titles-string 'Let go! | #S | / #W'
 setw -g window-status-current-fg colour170
 setw -g window-status-current-attr bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour170]#F '
