--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,7 +101,7 @@ set -g @tasks_icon_urgent '⧗ '
 set -g @tasks_icon_outstanding '+ '
 
 # Status bar ------------------------------------------------------------- 
-# set-option -g status on
+set-option -g status on
 set-option -g set-titles on
 set -g status-interval 1
 set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION DISPLAY"
@@ -110,8 +110,8 @@ set -g status-position bottom
 set -g status-bg colour237
 set -g status-fg colour137
 set -g status-attr 'none'
-#set -g status-left ' #[fg=colour197]#(~/bin/internet_info.sh) '
-set -g status-right '#(eval ~/.tmux/responsive `tmux display -p "#{client_width}"`)#[fg=colour165]#[bg=default] #H'
+set -g status-left "#[fg=colour17,bg=colour190] #S #[fg=colour190,bg=colour234,nobold,nounderscore,noitalics]"
+set -g status-right '#(eval ~/.tmux/responsive `tmux display -p "#{client_width}"`)'
 set -g status-right-length 100
 set -g status-left-length 80
 
@@ -119,12 +119,25 @@ set-window-option -g aggressive-resize
 setw -g window-status-current-fg colour170
 setw -g window-status-current-bg colour239
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour170]#F '
+setw -g window-status-format "#[fg=colour85,bg=colour234] #I #[fg=colour85,bg=colour234] #W"
+setw -g window-status-current-format "#[fg=colour234,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #I #[fg=colour255,bg=colour238] #W #[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]"
 
 set-option -g set-titles-string 'Let go! | #S | / #W'
 setw -g window-status-current-fg colour170
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour170]#F '
+
+
+set -g status-justify "left"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour255,bg=colour238"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour190"
+set -g status-style "none,bg=colour234"
+set -g message-style "fg=colour255,bg=colour238"
+set -g pane-border-style "fg=colour238"
+setw -g window-status-activity-style "none"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=colour85,bg=colour234"
 
 # Plugins
 # List of plugins
